--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,7 @@ body #content-2 .container .pol-block .tegi span #tegs i {
           transform: rotate(0deg) scale(1);
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
+  cursor: pointer;
 }
 
 body #content-2 .container .pol-block .tegi span #tegs i:hover {
