--- a/css/style.scss
+++ b/css/style.scss
@@ -294,6 +294,7 @@ body{
                 font-size: 15px;
                 transform: rotate(0deg) scale(1);
                 transition: all 0.6s ease;
+                cursor: pointer;
                 &:hover{
                   transform: rotate(180deg) scale(1.5);
                 }
